--- a/pom.xml
+++ b/pom.xml
@@ -99,8 +99,10 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.lynden</groupId>
+            <artifactId>GMapsFX</artifactId>
+            <version>2.10.0</version>
+        </dependency>
     </dependencies>
-
 </project>
